# opengl_engine_hro

./: CMakeLists.txt
include/: baseMeshBuilder.h  camera.h  frame.h  global_includes.h  mesh.h  objMeshBuilder.h  renderer.h  shader.h  window.h
src/: CMakeLists.txt  camera.cpp  frame.cpp  gouraud_shader.frag  gouraud_shader.vert  main.cpp  mesh.cpp  objMeshBuilder.cpp  phong_shader.frag  phong_shader.vert  renderer.cpp  shader.cpp  standard_shader.vert  toon_shader.frag  toon_shader.vert  window.cpp
